[package]
name = "envoy-filter-wasm-rust"
version = "0.1.0"
edition = "2021"
authors = ["Troy Dai <git@troydai.com>"]
description = "A simple Envoy WASM filter written in Rust"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
getrandom = "0.2.15"
log = "0.4"
proxy-wasm = "0.2.2"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
panic = "abort"
strip = "debuginfo"